finished text and table

--- a/assessment.html
+++ b/assessment.html
@@ -5,8 +5,76 @@
     <title></title>
   </head>
   <body>
+    <h2>Text</h2>
 
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <br>
+    <br>
 
+<blockquote>
+  <em>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</em>
+</blockquote>
+    <br>
+    <br>
+
+    <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <br>
+    <br>
+
+    <h2>Table</h2>
+
+    <table>
+      <tr>
+        <td></td>
+        <td colspan="5">Scores by Quarter</td>
+      </tr>
+        <tr>
+          <th>Game</th>
+          <td><table>
+            <tr>
+              <th colspan="2">First Half</th>
+              <th colspan="2">Second Half</th>
+            </tr>
+            <tr>
+              <th>Q1</th>
+              <th>Q2</th>
+              <th>Q3</th>
+              <th>Q4</th>
+            </tr>
+          </table>
+          <th> Final </th>
+        </tr>
+        </table>
+        <table>
+      <tr>
+        <td>Bronco</td>
+        <td>7</td>
+        <td>3</td>
+        <td>0</td>
+        <td>7</td>
+        <td>17</td>
+      </tr>
+      <tr>
+        <td>Chicago</td>
+        <td>0</td>
+        <td>6</td>
+        <td>3</td>
+        <td>6</td>
+        <td>15</td>
+      </tr>
+      <tfoot>
+        <th align="right">Total</th>
+        <th width="35">7</th>
+        <th width="35">9</th>
+        <th width="35">3</th>
+        <th width="35">13</th>
+        <th width="35">32</th>
+      </tfoot>
+    </table>
 
 
     <h2>List</h2>
